# beere

./: .gitignore  README.md
beerec/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  TODO-LIST.md  format_src.bat
beerec/.cache/clangd/index/: analyzer.c.E949F9285F86B87C.idx  analyzer.h.35040A687F29BF10.idx  compiler.c.3B7DDA2F5DDE1470.idx  compiler.h.805E3FB661095259.idx  importer.c.1A64C302812FE9DA.idx  importer.h.9D86D961E8A66EDA.idx  lexer.c.25A18301FD43E3CE.idx  lexer.c.BCEA61E9BE7B4CFE.idx  lexer.h.038DBF1A4FC1FF8C.idx  lexer.h.718BCC0A3A8D5848.idx  logger.c.42B4EEA4339E860E.idx  logger.c.FC8E67A7F508F5F8.idx  logger.h.A4199E58210D67E7.idx  logger.h.B32CFA795F85D69B.idx  main.c.86F7926CBBB8B998.idx  module-handler.c.A541FEC47CB7E5BD.idx  modules.c.411B04AFFFE8E01D.idx  modules.h.6FF6128AA24CAB7B.idx  nodes.h.DD63DD2D7B3DD0C1.idx  parser.c.28C9B9B58B26A60C.idx  parser.c.2D240814DAE8EAD8.idx  parser.h.012547FF5FD07072.idx  parser.h.B1FD5266B2B4DF69.idx  semantic_analyzer.c.2E28BC3C908E1D0B.idx  semantic_analyzer.h.32E140A8865728C6.idx  string_builder.c.A90A3D8BE57147A0.idx  string_builder.c.CF83FFCC57406E05.idx  (+10 more)
beerec/.tours/: introduction.tour
beerec/compiler/: compiler.c  compiler.h  main.c
beerec/data/: data.h
beerec/input/: main.beere  mano.beere
beerec/input/main/: main.beere
beerec/input/mano/: mano.beere
beerec/input/module/: beere.mod
beerec/input/other_module/: new_module.beere
beerec/lib/: math.beere  std.asm
beerec/lib/internal_libs/: math.lrj  std.lrj
beerec/lib/native_libs/: lib.c
beerec/roadmap/: TODO-LIST.md
beerec/src/analyzer/: analyzer.c  analyzer.h
beerec/src/codegen/: code-gen.c  code-gen.h  codegen.c  codegen.h
beerec/src/init/: compiler.c  compiler.h  main.c
beerec/src/lexer/: lexer.c  lexer.h
beerec/src/modules/: modules.c  modules.h
beerec/src/parser/: parser.c  parser.h
beerec/src/symbols/: symbols.h
beerec/src/utils/: utils.c  utils.h
(+136 files in other folders)
